# khl_api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  todo.txt
apiKhl/: main.py  settings.py
apiKhl/api/: router.py
apiKhl/auth/: dependencies.py  exceptions.py  repositories.py  router.py  schemas.py  service.py
apiKhl/db/auth/: models.py  session.py
nginx/: nginx.conf
src/: error_handling_config.py  exceptions.py  main.py  settings.py
src/api/: dependencies.py  router.py  schemas.py  service.py
src/api/arenas/: routers.py  schemas.py
src/api/players/: routers.py  schemas.py  test.py
src/api/refs/: routers.py  schemas.py
src/api/teams/: routers.py  schemas.py
src/api/tests/: routers.py
src/api/trainers/: routers.py  schemas.py
src/auth/: dependencies.py  repositories.py  router.py  schemas.py  service.py
src/db/api/: config.py  models.py  session.py
src/db/api/models/: __init__.py  arenas.py  player.py  refs.py  teams.py  tournaments.py  trainers.py
src/db/auth/: session.py
src/service/: helpers.py
src/service/arenas/: handlers.py  helpers.py
src/service/players/: handlers.py  helpers.py
src/service/refs/: handlers.py  helpers.py
src/service/teams/: handlers.py  helpers.py
src/service/trainers/: handlers.py  helpers.py
tests/: conftest.py  test_main.py
tests/api/arenas/: test_routers.py
tests/api/refs/: test_routers.py
tests/api/teams/: test_routers.py
tests/api/trainers/: test_routers.py
