[tool.poetry]
name = "apiKhl"
version = "0.1.0"
description = ""
authors = ["Artem Golovachev <artbryansk94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
redis = "^5.0.2"
clickhouse-sqlalchemy = "^0.3.0"
asynch = "^0.2.3"
greenlet = "^3.0.3"
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    'src'
]
asyncio_mode = "auto"